--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,20 +2,26 @@ aniso8601==9.0.1
 Babel==2.14.0
 blinker==1.7.0
 click==8.1.7
+dnspython==2.5.0
+email-validator==2.1.0.post1
 Flask==3.0.1
 Flask-BabelEx==0.9.4
+Flask-Cors==4.0.0
 Flask-Login==0.6.3
 Flask-Mail==0.9.1
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.10
-Flask-Security==3.0.0
+Flask-Security-Too==5.3.3
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
+idna==3.6
+importlib-resources==6.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
 passlib==1.7.4
+PyJWT==2.8.0
 pytz==2023.3.post1
 six==1.16.0
 speaklater==1.3
