--- a/frontend/end-to-end-messenger-vue/package.json
+++ b/frontend/end-to-end-messenger-vue/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
