--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,15 @@
 
 
 # Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+**logs
+**.log
+**npm-debug.log*
+**yarn-debug.log*
+**yarn-error.log*
+**pnpm-debug.log*
+**lerna-debug.log*
 
-node_modules
+**node_modules
 .DS_Store
 dist
 dist-ssr
